fixed alignment issues with login page and 50% of problems is rate a driver

--- a/src/components/FormComponent/form.css
+++ b/src/components/FormComponent/form.css
@@ -1,7 +1,5 @@
 .formContainer{
-    margin-top: 60px;
    text-align: center;
-  
 }
 input[type="text"], [type="password"]{
     margin-bottom: 1em;
