--- a/src/components/TextComponent/text.css
+++ b/src/components/TextComponent/text.css
@@ -3,7 +3,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
     position: relative;
-    left:10%;
+    margin-left:10%;
     font-size: 2.5vw;
     line-height: 1.25em;
     display: inline-block;
